<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="order" type="com.ssc.cafe.data.AddItem"/>
        <variable name="viewModel" type="com.ssc.cafe.home.HomeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/item_image"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:imageUrl="@{order.product_image}"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/screen_background_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="@{order.product_name}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_name"
                android:layout_marginLeft="70dp"
                android:layout_marginStart="70dp"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toTopOf="@+id/item_image"/>
        <TextView
                android:text="@string/item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_type"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toBottomOf="@+id/item_name"/>

        <TextView
                android:text="@string/item_sugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/item_sugar"
                android:layout_marginTop="13dp"
                app:layout_constraintStart_toStartOf="@+id/item_type"
                app:layout_constraintTop_toBottomOf="@+id/item_type"/>

        <RadioGroup
                android:id="@+id/radio_group_type"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/item_type"
                app:layout_constraintTop_toTopOf="@+id/item_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/item_type">
            <RadioButton
                    android:text="@string/type_iced"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_iced"
                    android:textSize="6pt"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/type_hot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_hot"
                    android:textSize="6pt"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_weight="1"/>
        </RadioGroup>

        <RadioGroup
                android:id="@+id/radio_group_sugar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/item_sugar"
                app:layout_constraintTop_toTopOf="@+id/item_sugar"
                app:layout_constraintStart_toStartOf="@+id/radio_group_type">
            <RadioButton
                    android:text="@string/sugar_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sugar_yes"
                    android:textSize="6pt"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/sugar_non"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sugar_non"
                    android:textSize="6pt"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:layout_weight="1"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>