<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:text="@string/order_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_number_title"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/order_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_time_title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/order_number_title"/>
        <TextView
                android:text="@string/order_account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_account_title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/order_time_title"/>
        <TextView
                android:text="@string/total_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_item_title" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/order_account_title" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/total_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_item_price"
                app:layout_constraintStart_toEndOf="@+id/total_item_title"
                android:layout_marginLeft="120dp" android:layout_marginStart="120dp"
                app:layout_constraintTop_toTopOf="@+id/total_item_title"
                app:layout_constraintBottom_toBottomOf="@+id/total_item_title"/>
        <TextView
                android:text="@string/order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_number" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/order_number_title"
                app:layout_constraintTop_toTopOf="@+id/order_number_title"
                app:layout_constraintBottom_toBottomOf="@+id/order_number_title"/>
        <TextView
                android:text="1111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_time" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/order_time_title"
                app:layout_constraintTop_toTopOf="@+id/order_time_title"
                app:layout_constraintBottom_toBottomOf="@+id/order_time_title"/>
        <TextView
                android:text="111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/order_account" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/order_account_title"
                app:layout_constraintTop_toTopOf="@+id/order_account_title"
                app:layout_constraintBottom_toBottomOf="@+id/order_account_title"/>
        <TextView
                android:text="111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total_item" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/total_item_title"
                app:layout_constraintTop_toTopOf="@+id/total_item_title"
                app:layout_constraintBottom_toBottomOf="@+id/total_item_title"/>
        <TextView
                android:text="500TWD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/total_item_price"
                app:layout_constraintTop_toTopOf="@+id/total_item_price"
                app:layout_constraintBottom_toBottomOf="@+id/total_item_price"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp" app:srcCompat="@color/bottom_unselect"
                android:id="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/total_item_title" android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>